fhir bridge responses storage changes